In Safari on iOS, vh refers to a percentage of the screen height versus the viewport height, which is smaller because of the url bar. Instead we should use percentages where possible to avoid weird spacing issues on safari.

--- a/static/brand.css
+++ b/static/brand.css
@@ -171,8 +171,8 @@
     overflow: hidden;
     position: absolute;
     text-align: center;
-    left: 50vw;
-    top: 50vh;
+    left: 50%;
+    top: 50%;
     transform: translate(-50%,-50%);
     z-index: 3;
   }
@@ -191,8 +191,8 @@
     background: rgba(255,255,255,0.95);
     clip: auto;
     opacity: 1;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
   }
 }
 
